--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ h1 {
 p {
     font-family: 'Work Sans', sans-serif;
     font-size: 22px;
+    margin: auto;
 }
 
 .movie-text>p {
@@ -101,14 +102,67 @@ footer {
     text-align: center;
 }
 
+
+
 /* Iteration 1: Styling all the flex elements with (Justify-content:space-between) & (align-items:center) */
+
+
+
+
+
+.flex-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
 
 /* Iteration 2: Using flex-wrap */
 
+
+
+.movies{
+    flex-wrap: wrap;
+    margin: 3% 14%;
+}
+
+
+
 /* Iteration 3: Styling all the flex elements with (flex-direction:column), (Justify-content:space-evenly) */
+
+
+
+.flex-column{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
 
 /* Iteration 4: Animation */
 
+
+
+#scroll{
+    position: relative;
+    animation: zoom 3s infinite;
+}
+
+@keyframes zoom{
+    0%{
+        top: 15px;
+    }
+    100%{
+        top: 100px;
+    }
+}
 /* Iteration 5: Making webpage mobile responsive */
-
-
+@media only screen and (max-width:600px) {
+    .wrap-reverse{
+        flex-wrap: wrap-reverse;
+    }
+    .container{
+        text-align: center;
+    }
+}
